docs/envoy/v1.24.0/_sources/intro/arch_overview/security/external_dep_api.rst.txt
External dependencies: ``api``
==============================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `bazel-skylib <https://github.com/bazelbuild/bazel-skylib>`__, `1.3.0 <https://github.com/bazelbuild/bazel-skylib/releases/tag/1.3.0>`__, 2022-09-01, , `Apache-2.0 <https://github.com/bazelbuild/bazel-skylib/blob/1.3.0/LICENSE>`__
  `buf <https://buf.build>`__, `1.7.0 <https://github.com/bufbuild/buf/releases/tag/v1.7.0>`__, 2022-07-27, , `Apache-2.0 <https://github.com/bufbuild/buf/blob/v1.7.0/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.35.0 <https://github.com/bazelbuild/rules_go/releases/tag/v0.35.0>`__, 2022-09-11, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.35.0/LICENSE.txt>`__
  `Google APIs <https://github.com/googleapis/googleapis>`__, `82944da <https://github.com/googleapis/googleapis/tree/82944da21578a53b74e547774cf62ed31a05b841>`__, 2019-12-02, , `Apache-2.0 <https://github.com/googleapis/googleapis/blob/82944da21578a53b74e547774cf62ed31a05b841/LICENSE>`__
  `OpenCensus Proto <https://github.com/census-instrumentation/opencensus-proto>`__, `0.3.0 <https://github.com/census-instrumentation/opencensus-proto/releases/tag/v0.3.0>`__, 2022-09-22, , `Apache-2.0 <https://github.com/census-instrumentation/opencensus-proto/blob/v0.3.0/LICENSE>`__
  `OpenTelemetry Proto <https://github.com/open-telemetry/opentelemetry-proto>`__, `0.19.0 <https://github.com/open-telemetry/opentelemetry-proto/releases/tag/v0.19.0>`__, 2022-08-03, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-proto/blob/v0.19.0/LICENSE>`__
  `Prometheus client model <https://github.com/prometheus/client_model>`__, `147c58e <https://github.com/prometheus/client_model/tree/147c58e9608a4f9628b53b6cc863325ca746f63a>`__, 2021-06-07, , `Apache-2.0 <https://github.com/prometheus/client_model/blob/147c58e9608a4f9628b53b6cc863325ca746f63a/LICENSE>`__
  `Protobuf Rules for Bazel <https://github.com/bazelbuild/rules_proto>`__, `4.0.0 <https://github.com/bazelbuild/rules_proto/releases/tag/4.0.0>`__, 2021-09-15, , `Apache-2.0 <https://github.com/bazelbuild/rules_proto/blob/4.0.0/LICENSE>`__
  `protoc-gen-validate (PGV) <https://github.com/envoyproxy/protoc-gen-validate>`__, `0.6.7 <https://github.com/envoyproxy/protoc-gen-validate/releases/tag/v0.6.7>`__, 2022-03-04, , `Apache-2.0 <https://github.com/envoyproxy/protoc-gen-validate/blob/v0.6.7/LICENSE>`__
  `xDS API <https://github.com/cncf/xds>`__, `1e77728 <https://github.com/cncf/xds/tree/1e77728a1eaa11d6c931ec2ccd6e95f516a7ef94>`__, 2022-05-20, , `Apache-2.0 <https://github.com/cncf/xds/blob/1e77728a1eaa11d6c931ec2ccd6e95f516a7ef94/LICENSE>`__
  `Zipkin API <https://github.com/openzipkin/zipkin-api>`__, `1.0.0 <https://github.com/openzipkin/zipkin-api/releases/tag/1.0.0>`__, 2020-11-22, , `Apache-2.0 <https://github.com/openzipkin/zipkin-api/blob/1.0.0/LICENSE>`__

