docs/envoy/v1.26.4/_sources/intro/arch_overview/security/external_dep_api.rst.txt
External dependencies: ``api``
==============================

.. csv-table::
  :header: Name, Version, Release date, CPE, License
  :widths: 2, 1, 1, 2, 1

  `bazel-skylib <https://github.com/bazelbuild/bazel-skylib>`__, `1.4.1 <https://github.com/bazelbuild/bazel-skylib/releases/tag/1.4.1>`__, 2023-02-09, , `Apache-2.0 <https://github.com/bazelbuild/bazel-skylib/blob/1.4.1/LICENSE>`__
  `buf <https://buf.build>`__, `1.14.0 <https://github.com/bufbuild/buf/releases/tag/v1.14.0>`__, 2023-02-09, , `Apache-2.0 <https://github.com/bufbuild/buf/blob/v1.14.0/LICENSE>`__
  `Go rules for Bazel <https://github.com/bazelbuild/rules_go>`__, `0.38.1 <https://github.com/bazelbuild/rules_go/releases/tag/v0.38.1>`__, 2023-01-26, , `Apache-2.0 <https://github.com/bazelbuild/rules_go/blob/v0.38.1/LICENSE.txt>`__
  `Google APIs <https://github.com/googleapis/googleapis>`__, `114a745 <https://github.com/googleapis/googleapis/tree/114a745b2841a044e98cdbb19358ed29fcf4a5f1>`__, 2023-01-10, , `Apache-2.0 <https://github.com/googleapis/googleapis/blob/114a745b2841a044e98cdbb19358ed29fcf4a5f1/LICENSE>`__
  `OpenCensus Proto <https://github.com/census-instrumentation/opencensus-proto>`__, `0.4.1 <https://github.com/census-instrumentation/opencensus-proto/releases/tag/v0.4.1>`__, 2022-09-23, , `Apache-2.0 <https://github.com/census-instrumentation/opencensus-proto/blob/v0.4.1/LICENSE>`__
  `OpenTelemetry Proto <https://github.com/open-telemetry/opentelemetry-proto>`__, `0.19.0 <https://github.com/open-telemetry/opentelemetry-proto/releases/tag/v0.19.0>`__, 2022-08-03, , `Apache-2.0 <https://github.com/open-telemetry/opentelemetry-proto/blob/v0.19.0/LICENSE>`__
  `Prometheus client model <https://github.com/prometheus/client_model>`__, `147c58e <https://github.com/prometheus/client_model/tree/147c58e9608a4f9628b53b6cc863325ca746f63a>`__, 2021-06-07, , `Apache-2.0 <https://github.com/prometheus/client_model/blob/147c58e9608a4f9628b53b6cc863325ca746f63a/LICENSE>`__
  `Protobuf Rules for Bazel <https://github.com/bazelbuild/rules_proto>`__, `4.0.0 <https://github.com/bazelbuild/rules_proto/releases/tag/4.0.0>`__, 2021-09-15, , `Apache-2.0 <https://github.com/bazelbuild/rules_proto/blob/4.0.0/LICENSE>`__
  `protoc-gen-validate (PGV) <https://github.com/bufbuild/protoc-gen-validate>`__, `0.10.1 <https://github.com/bufbuild/protoc-gen-validate/releases/tag/v0.10.1>`__, 2023-03-20, , `Apache-2.0 <https://github.com/bufbuild/protoc-gen-validate/blob/v0.10.1/LICENSE>`__
  `xDS API <https://github.com/cncf/xds>`__, `46e39c7 <https://github.com/cncf/xds/tree/46e39c7b9b4321731ebe247f2e176fdf0518d76e>`__, 2023-01-12, , `Apache-2.0 <https://github.com/cncf/xds/blob/46e39c7b9b4321731ebe247f2e176fdf0518d76e/LICENSE>`__
  `Zipkin API <https://github.com/openzipkin/zipkin-api>`__, `1.0.0 <https://github.com/openzipkin/zipkin-api/releases/tag/1.0.0>`__, 2020-11-22, , `Apache-2.0 <https://github.com/openzipkin/zipkin-api/blob/1.0.0/LICENSE>`__

